<resources>
    <string name="app_name">MphaGo</string>

    <!-- Preference Titles -->

    <!-- Messages Preferences -->

    <!-- Sync Preferences -->
    <string name="id">ID</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="nickname">Nickname</string>
    <string name="not_be_null">This text box must be not null</string>
    <string name="login_failed">Login failed</string>
    <string name="register_failed">Register failed</string>
    <string name="search">Search</string>
    <string name="account_setting">Account</string>
    <string name="short_message">Short message</string>
    <string name="information">Information</string>
    <string name="image">Profile image</string>
    <string name="insert_photo">Insert photo url</string>
    <string name="empty">Empty</string>
    <string name="answer">Answer</string>
    <string name="correct_answer">Correct a question</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="wrong_answer">Wrong answer</string>
    <string name="difficulty">Difficulty: %s</string>
    <string name="admin">Admin</string>
    <string name="upload_success">Upload success</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="app">App</string>
    <string name="system_default">System default</string>
    <string name="light_mode">Light mode</string>
    <string name="dark_mode">Dark mode</string>
</resources>